--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,28 @@
+root: true
 env:
   browser: true
   es2021: true
-extends: airbnb
+extends:
+  - airbnb
+  - airbnb-typescript
+  - eslint:recommended
+  - plugin:@typescript-eslint/recommended
+  - plugin:react/recommended
+parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
-  sourceType: module
+  project: "./tsconfig.json"
+  sourceType: "module"
+plugins:
+  - '@typescript-eslint'
+  - react
 rules:
+  react/jsx-filename-extension: [1, {extensions: [".tsx", ".ts", ".js"]}]
   react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
-  react/prop-types: 0
-  react/jsx-props-no-spreading: 0
-  no-unused-vars: 1
+  react/jsx-one-expression-per-line: ["error", { "allow": "single-child" }]
+  filesWithoutExtension: 0
+  react/react-in-jsx-scope: 0
+  no-console: 0
+  no-param-reassign: 0
+  '@typescript-eslint/no-unused-vars': 1
+  react/require-default-props: 0
