--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -26,3 +26,4 @@ rules:
   no-param-reassign: 0
   '@typescript-eslint/no-unused-vars': 1
   react/require-default-props: 0
+  react/jsx-props-no-spreading: 0
